--- a/app/src/main/res/layout/login/layout/activity_login.xml
+++ b/app/src/main/res/layout/login/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".login.LoginActivity">
+    tools:context=".scenes.login.LoginActivity">
 
     <!-- android: Referente a las propiedades nativas de los componentes -->
     <!-- tools: Referente a las propiedades que serán visualizadas en el modo preview -->
