--- a/app/src/main/res/menu/menu_topics.xml
+++ b/app/src/main/res/menu/menu_topics.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/appSearchBar"
+        android:id="@+id/topicsSearchBar"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
         app:actionViewClass="android.widget.SearchView"
