Change colors and fix navigations between tabs

--- a/app/src/main/res/layout-v21/activity_topics.xml
+++ b/app/src/main/res/layout-v21/activity_topics.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorTabBarBackgorund"
+        android:elevation="4dp"
         app:itemBackground="@color/colorTabBarBackgorund"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
