--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -17,8 +17,8 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:itemBackground="@color/colorAccent"
+        android:background="@color/colorTabBarBackgorund"
+        app:itemBackground="@color/colorTabBarBackgorund"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
