--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6A1B9A</color>
-    <color name="colorPrimaryDark">#38006b</color>
-    <color name="colorAccent">#90caf9</color>
+    <color name="colorPrimary">#F39000</color>
+    <color name="colorPrimaryDark">#DD6300</color>
+    <color name="colorAccent">#F39000</color>
+    <color name="colorDarkGrayKC">#242324</color>
+    <color name="colorBlackKC">#0C0C0C</color>
+    <color name="colorTabBarBackgorund">#EAEAEA</color>
+
 </resources>
