--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/tabTopics"
-        android:icon="@drawable/ic_add"
-        android:title="Topics" />
+        android:icon="@drawable/ic_topics"
+        android:title="@string/topics" />
 
     <item
         android:id="@+id/tabUsers"
         android:icon="@drawable/ic_author"
-        android:title="Users" />
+        android:title="@string/users" />
 </menu>
