--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorDarkGrayKC">#242324</color>
     <color name="colorBlackKC">#0C0C0C</color>
     <color name="colorTabBarBackgorund">#EAEAEA</color>
+    <color name="colorWhite">#FFFFFF</color>
 
 </resources>
