--- a/app/src/main/res/layout/fragment_create_topic.xml
+++ b/app/src/main/res/layout/fragment_create_topic.xml
@@ -20,7 +20,9 @@
                 android:id="@+id/labelAuthor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/hint_author"
+                android:textColor="@color/colorBlackKC"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="Author" />
