--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toStartOf="@id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorBlackKC"
         tools:text="Topic" />
 
     <TextView
@@ -32,12 +33,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.65" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iconPosts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:tint="@color/colorGrayKC"
         app:layout_constraintBottom_toTopOf="@id/labelPosts"
         app:layout_constraintEnd_toStartOf="@id/iconViews"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -49,6 +53,9 @@
         android:id="@+id/iconViews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:tint="@color/colorGrayKC"
         app:layout_constraintBottom_toTopOf="@id/labelViews"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
