--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorBlackKC">#0C0C0C</color>
     <color name="colorTabBarBackgorund">#EAEAEA</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrayKC">#808180</color>
 
 </resources>
