--- a/app/src/main/res/layout/login/layout/activity_login.xml
+++ b/app/src/main/res/layout/login/layout/activity_login.xml
@@ -10,14 +10,10 @@
     android:padding="16dp"
     tools:context=".scenes.login.LoginActivity">
 
-    <!-- android: Referente a las propiedades nativas de los componentes -->
-    <!-- tools: Referente a las propiedades que serán visualizadas en el modo preview -->
-    <!-- app: Referente a las propiedades de los componentes de dependencias/bibliotecas -->
-
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo_eh_ho" />
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        app:srcCompat="@drawable/ic_logo_eh_ho" />
 
     <FrameLayout
         android:layout_width="match_parent"
